feat: 更新版权年份并添加动态更新功能
- 将静态的 2024 年份改为动态显示当前年份
- 添加 updateCopyrightYear 函数，用于更新版权年份
- 在页面加载完成后调用 updateCopyrightYear 函数
- 优化了版权年份的显示逻辑，支持 2025 年及以后的年份

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </main>
 
     <footer class="footer">
-      <p>© 2024 黄金价格换算器 | 数据仅供参考</p>
+      <p>© <span id="copyrightYear">2025</span> 黄金价格换算器 | 数据仅供参考</p>
     </footer>
   </div>
 
