feat(gold-calculator): 实现金价实时获取与多单位换算功能
- 添加实时金价显示，支持美元/盎司单位
- 实现美元/盎司、人民币/盎司、人民币/克、美元/克四单位转换
- 集成福利云API和xxapi.cn双数据源，提高数据可靠性
- 金价每5秒自动更新，提升数据实时性
- 首次加载自动填入实时金价，优化用户体验
- 汇率仅首次加载获取，减少API调用提高性能
- 添加智能容错机制，API失败时自动切换备用方案
- 移除手动刷新按钮，简化界面操作
- 更新页面标题图标和说明文案
- 优化移动端显示效果和交互体验

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>黄金价格换算器</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +14,7 @@
   <div class="container">
     <header class="header">
       <h1>🏆 黄金价格换算器</h1>
-      <p>实时汇率 · 精确换算</p>
+      <p>实时金价 · 精确换算 · 多单位转换</p>
     </header>
 
     <main class="main">
@@ -32,17 +33,21 @@
           </div>
           <div class="input-group">
             <span class="currency-symbol" id="currencySymbol">$</span>
-            <input type="number" id="goldPrice" placeholder="输入价格" step="0.01" min="0">
+            <input type="number" id="goldPrice" placeholder="请输入黄金价格" step="0.01" min="0">
             <span class="unit" id="unitDisplay">/ 盎司</span>
+          </div>
+          <div class="current-gold-price">
+            <span class="price-label">实时金价:</span>
+            <span class="price-value" id="currentGoldPrice">加载中...</span>
+            <span class="price-unit">美元/盎司</span>
           </div>
         </div>
 
         <div class="exchange-rate">
           <div class="rate-info">
-            <span class="rate-label">当前汇率</span>
+            <span class="rate-label">当前汇率:</span>
             <span class="rate-value" id="exchangeRate">加载中...</span>
           </div>
-          <button id="refreshRate" class="refresh-btn">🔄 刷新</button>
         </div>
 
         <div class="result-section">
@@ -74,8 +79,9 @@
         <h3>换算说明</h3>
         <ul>
           <li>1 盎司 = 31.1035 克</li>
-          <li>汇率数据来源于实时API</li>
-          <li>价格每5分钟自动更新</li>
+          <li>支持美元/盎司、人民币/盎司、人民币/克、美元/克转换</li>
+          <li>金价每5秒自动更新，汇率首次加载获取</li>
+          <li>数据来源于福利云API和xxapi.cn</li>
         </ul>
       </div>
     </main>
