--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <meta property="og:url" content="https://gold.lg8.dpdns.org/">
   <meta property="og:title" content="黄金价格换算器 - 实时金价转换工具">
   <meta property="og:description" content="免费的黄金价格换算器，实时获取最新金价并支持美元/盎司、人民币/盎司、人民币/克、美元/克等多种单位间的精确转换。帮助投资者和消费者快速计算黄金价值。">
-  <meta property="og:image" content="https://gold.lg8.dpdns.org/assets/icons/icon-512x512.png">
+  <meta property="og:image" content="https://gold.lg8.dpdns.org/icons/icon-512x512.png">
   <meta property="og:image:width" content="512">
   <meta property="og:image:height" content="512">
   <meta property="og:image:alt" content="黄金价格换算器图标">
@@ -32,16 +32,16 @@
   <meta property="twitter:title" content="黄金价格换算器 - 实时金价转换工具">
   <meta property="twitter:description"
     content="免费的黄金价格换算器，实时获取最新金价并支持美元/盎司、人民币/盎司、人民币/克、美元/克等多种单位间的精确转换。帮助投资者和消费者快速计算黄金价值。">
-  <meta property="twitter:image" content="https://gold.lg8.dpdns.org/assets/icons/icon-512x512.png">
+  <meta property="twitter:image" content="https://gold.lg8.dpdns.org/icons/icon-512x512.png">
   <meta property="twitter:image:alt" content="黄金价格换算器图标">
 
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="/assets/manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- iOS Safari 添加到桌面支持 -->
-  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png">
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <meta name="apple-mobile-web-app-title" content="黄金价格换算器">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -164,13 +164,12 @@
   </div>
 
   <!-- Google Analytics -->
-  <!-- 注意：在生产环境中替换GA_MEASUREMENT_ID为实际的Google Analytics ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T3JJ1ZGS01"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'GA_MEASUREMENT_ID');
+    gtag('config', 'G-T3JJ1ZGS01');
   </script>
 
   <script type="module" src="main.js"></script>
